Layout fix: Logout button is visible for dark themes

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -199,6 +199,7 @@ a {
 
 .nav-content > ul > li button {
     background-color: inherit;
+    color: inherit;
 }
 
 .access-opts select {
@@ -1249,6 +1250,7 @@ a {
 
 .nav-content > ul > li button {
     background-color: inherit;
+    color: inherit;
 }
 
 .access-opts select {
@@ -2324,6 +2326,7 @@ a {
 
 .nav-content > ul > li button {
     background-color: inherit;
+    color: inherit;
 }
 
 .access-opts select {
