--- a/resources/css/colors.css
+++ b/resources/css/colors.css
@@ -110,6 +110,7 @@ a {
 
 .nav-content > ul > li button {
     background-color: inherit;
+    color: inherit;
 }
 
 .access-opts select {
